14/11/2006:	v3.3.14
	- fix doc file permission

13/11/2006:	v3.3.13
	- help text parser rewritten
	- new translations
	- added final 10.2 theme

7/11/2006:	v3.3.12
	- new translations

27/10/2006:	v3.3.11
	- penguin theme is back
	- adjust html help text parser

26/10/2006:	v3.3.10
	- new translations

23/10/2006:	v3.3.9
	- added 'noinstallopt' option to gfxboot.cfg

26/9/2006:	v3.3.8
	- translations updated

25/9/2006:	v3.3.7
	- Arabic is back

25/9/2006:	v3.3.6
	- added 'firmware' menu entry

20/9/2006:	v3.3.5
	- support Punjabi (Gurmukhi script)

20/9/2006:	v3.3.4
	- fixed font rendering bug
	- added some indic fonts

19/9/2006:	v3.3.3
	- use 4 bit for antialiasing (not 3)

19/9/2006:	v3.3.2
	- fix Estonian support

18/9/2006:	v3.3.1
	- support antialiased fonts
	- added Estonian
	- put hard disk install option back in

23/8/2006:	v3.3.0
	- 32 bit rewrite finished
	- changed interface to bootloader

21/8/2006:	v3.2.37
	- move to 32 bit, cont.

7/8/2006:	v3.2.36
	- move to 32 bit, cont.
	- added 10.2 openSUSE logos

1/8/2006:	v3.2.35
	- started internal rewrite to run all code in 32 bit pm

24/7/2006:	v3.2.34
	- fixed Zen theme

19/7/2006:	v3.2.33
	- added Catalan & Vietnamese
	- better debug window
	- fixed minor file reading bug
	- better internal locale handling
	- separated en locale into en_GB & en_US

17/7/2006:	v3.2.32
	- more than one boot option line, finished (#160066)
	- added 'about' button
	- make it openSUSE
	- added xen test config

10/7/2006:	v3.2.31
	- use disk image, not floppy for grub testing
	- updated Zen pictures
	- made full panel default
	- ShiftTab now works
	- remove duplicate video modes (#145749)
	- menu bar fits menu text width
	- made 'Text Mode' translatable (#179582)
	- workaround for interlaced mode issue on some ATI cards (#177982)
	- use disk image, not floppy for lilo testing
	- major code cleanup
	- removed ancient compatibility code
	- allow more than one boot option line (for xen)
	- using beta pictures

9/6/2006:	v3.2.30